--- a/src/css/main.css
+++ b/src/css/main.css
@@ -313,9 +313,9 @@ textarea {
 
 .edit-frame {
     position: absolute;
-    border: none;
+    border: 2px solid #217346;
     margin: 0;
-    padding: 0 0 0 2px;
+    padding: 3px;
     z-index: 1000;
     background: #fff;
 }
