--- a/src/css/toolbar.css
+++ b/src/css/toolbar.css
@@ -4,7 +4,7 @@ li { list-style: none; }
 .glyphicon-th-list:before { content: "\e012"; }
 .glyphicons { font-family: 'Glyphicons Halflings'; color: #555; font-size: 12px; }
 .topBar { background: #e1e1e1; height: 30px; overflow: hidden;}
-.toolBar { font-size: 9pt; font-family: 'Microsoft Yahei', 'SimSun', 'sans-serif'; background: #fafafa; border-bottom: 1px solid #e1e1e1; height: 130px; position: relative;}
+.toolBar { font-size: 9pt; font-family: 'Microsoft Yahei', 'SimSun', 'sans-serif'; background: #fafafa; border-bottom: 1px solid #e1e1e1; position: relative;}
 .file-control, .fui-control-list, .download{ float: left; }
 .file-control span { background: #217346; color: #fff; padding: 7px 20px; height: 16px; display: block; cursor: default; }
 .fui-control-list { height: 30px; }
