--- a/src/css/toolbar.css
+++ b/src/css/toolbar.css
@@ -21,6 +21,7 @@ li { list-style: none; }
 .fui-cf-bg-extend-ico { background: url('../img/funcBgExtend.png'); }
 .fui-cf-comment-ico { background: url('../img/comment.png'); }
 .fui-cf-bg-extend2-ico { background: url('../img/funcBgExtend2.png'); }
+.fui-cf-bg-extend3-ico { background: url('../img/funcBgExtend3.png'); }
 .fui-section { border: 1px solid #fafafa; }
 .fui-cf-caret { display: inline-block; width: 0; height: 0; vertical-align: middle; border-top: 3px dashed; border-right: 3px solid transparent; border-left: 3px solid transparent; }
 .fui-group { display: inline-block; }
@@ -31,6 +32,7 @@ span { display: inline-block; }
 .fui-cf-text { margin: 0 3px; }
 .fui-title { text-align: center; height: 15px; }
 .fui-cf-desc { text-align: center; padding: 3px 0 0 0; }
+.ico-error { width: 16px; height: 16px; background-position: -150px -30px; }
 .ico-paste { background-position: -137px -1px; width: 32px; height: 32px; }
 .ico-shear { background-position: -225px 16px; width: 16px; height: 16px; }
 .ico-copy { background-position: -136px -72px; width: 16px; height: 16px; }
