--- a/src/css/main.css
+++ b/src/css/main.css
@@ -663,6 +663,7 @@ textarea {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
 }
 .prompt-box{
     height: 50px;
