--- a/src/css/siderbar.css
+++ b/src/css/siderbar.css
@@ -95,7 +95,7 @@
     color: #6e6e6e;
 }
 
-.checkbox {
+.siderbar-checkbox {
     position: relative;
     display: inline-block;
     height: 12px;
@@ -107,16 +107,16 @@
     border-radius: 2px;
 }
 
-.checkbox:active {
+.siderbar-checkbox:active {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05),
     inset 0px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
-.checkbox.checked {
+.siderbar-checkbox.checked {
     background: #e9ecee;
 }
 
-.checkbox.checked:after {
+.siderbar-checkbox.checked:after {
     content: "\e013";
     display: block;
     font-family: 'Glyphicons Halflings';
@@ -128,7 +128,7 @@
     right: 0;
 }
 
-.checkbox.half-checked:after {
+.siderbar-checkbox.half-checked:after {
     content: "\e074";
     display: block;
     font-family: 'Glyphicons Halflings';
@@ -163,7 +163,6 @@
 
 .validate-content .source{
     position: relative;
-    display: none;
 }
 .validate-content .source.active{
     display: block;
@@ -175,6 +174,7 @@
     width: 16px;
     height: 16px;
     background: url('../img/select_out.png');
+    cursor: pointer;
 }
 .validate-content .select-out.on{
     background: url('../img/select_out_on.png');
