--- a/src/css/main.css
+++ b/src/css/main.css
@@ -516,7 +516,7 @@ textarea {
     width: inherit;
 }
 
-.comment-ico .triangle {
+.comment-ico .excel_triangle {
     position: absolute;
     right: 0;
     width: 0;
